3-9-19
- get rid of mach_catch_exception_raise, rewrite exception handling logic
- fix potential NULL pointer dereferences

3-6-19
- re-organize code, get rid of dbgutils.c/dbgutils.h

2-21-19
- cmdfunc args parameters are no longer const char *
- fix expr.c double free
- new command: unset, set a convenience variable to void

2-20-19
- fixed some memory leaks
- extended new error system to breakpoints and watchpoints
- fixed up the includes across the entire project
- get rid of atoi in dbgcmd.c

2-19-19
- convenience variables
- a way to force iosdbg to never add ASLR to expressions via convenience
variables
- rewrote and fixed the expression parser
- expression parser now supports registers and convenience variables
- much better, more descriptive, and more manageable error system
- a ton of cleanup

2-5-18
- ignore zombies in pid_of_program
- fix bug in examine command
- rename memutils_dump_memory_new
- new function to grab a general purpose register

2-2-18
- fix giant memory leak in expr.c by not incrementing the pointer and instead
using an index variable
- fixed many bugs and improved expr.c by a long run
- got rid of the unions I used to convert between types

1-27-18
- implemented an expression parser and included it throughout the debugger
- fixed setting wp_map all to -1 like I should have done when I did it for
breakpoint.c

1-24-19
- new argument to attach command, '--waitfor'
- can have a trace wait for iosdbg to be attached to something before starting
- fix use after free if we iosdbg quits while a trace is active
- other bug fixes

1-23-19
- added trace command and its functionality
- fixed a bug with passing kqid to death_server

1-21-19
- iosdbg can now catch Unix signals sent to debuggee
- replace mach messages with kqueues to tell if debuggee has died
- better exit messages for debuggee
- remove dead code in machthread
- tons and tons of bug fixes related to Unix signals