@@ -1,6 +1,4 @@
 #include <stdio.h>
-#include <stdlib.h>
-#include <stdarg.h>
 
 #include <readline/readline.h>
 #include <readline/history.h>
